--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,8 @@ django-crispy-forms==2.0
 djangorestframework==3.14.0
 Pillow==9.4.0
 pytz==2023.3
+python-decouple==3.8
+requests==2.31.0
+requests-oauthlib==1.3.1
 sqlparse==0.4.3
 tzdata==2023.3
